--- a/src/pack-christmas.html
+++ b/src/pack-christmas.html
@@ -41,135 +41,133 @@
                             </p>
                         </div>
                     </div>
-                    <div class="pack1-body">
-                        <div class="row">
-                            <div class="col-sm-3 badges-bg">
-                                <div class="badges">
-                                    <img alt="10K PACK" class="img-responsive" src="images/packs/badge1.png">
-                                </div>
-                                <div class="badge-bottom">
-                                    <a class="buy_btn" href="javascript:void(0);" data-pid="46">
-                                        <button class="btn-animation btn-animation-color">Open</button>
-                                    </a>
-                                    <a class="demo" href="/pack/fifa18packs-ps4-10k-pack.html?demo=true">
-                                        <i class="iconfont icon-font47"></i>
-                                        <div class="demo1">Demo</div>
-                                    </a>
-                                    <div class="price">
-                                        10,000 Coins / 10,000 Credits </div>
-                                </div>
+                    <div class="pack1-body clearfix">
+                        <div class="badges-bg">
+                            <div class="badges">
+                                <img alt="10K PACK" class="pack-img" src="images/packs/badge1.png">
                             </div>
-                            <div class="col-sm-3 badges-bg">
-                                <div class="badges">
-                                    <img alt="25K PACK" class="img-responsive" src="images/packs/badge2.png">
-                                </div>
-                                <div class="badge-bottom">
-                                    <a class="buy_btn" href="javascript:void(0);" data-pid="52">
-                                        <button class="btn-animation btn-animation-color">Open</button>
-                                    </a>
-                                    <a class="demo" href="/pack/fifa18packs-ps4-25k-pack.html?demo=true">
-                                        <i class="iconfont icon-font47"></i>
-                                        <div class="demo1">Demo</div>
-                                    </a>
-                                    <div class="price">
-                                        25,000 Coins / 25,000 Credits </div>
-                                </div>
+                            <div class="badge-bottom">
+                                <a class="buy_btn" href="javascript:void(0);" data-pid="46">
+                                    <button class="btn-animation btn-animation-color">Open</button>
+                                </a>
+                                <a class="demo" href="/pack/fifa18packs-ps4-10k-pack.html?demo=true">
+                                    <i class="iconfont icon-font47"></i>
+                                    <div class="demo1">Demo</div>
+                                </a>
+                                <div class="price">
+                                    10,000 Coins / 10,000 Credits </div>
                             </div>
-                            <div class="col-sm-3 badges-bg">
-                                <div class="badges">
-                                    <img alt="50K PACK" class="img-responsive" src="images/packs/badge3.png">
-                                </div>
-                                <div class="badge-bottom">
-                                    <a class="buy_btn" href="javascript:void(0);" data-pid="47">
-                                        <button class="btn-animation btn-animation-color">Open</button>
-                                    </a>
-                                    <a class="demo" href="/pack/fifa18packs-ps4-50k-pack.html?demo=true">
-                                        <i class="iconfont icon-font47"></i>
-                                        <div class="demo1">Demo</div>
-                                    </a>
-                                    <div class="price">
-                                        50,000 Coins / 50,000 Credits </div>
-                                </div>
+                        </div>
+                        <div class="badges-bg">
+                            <div class="badges">
+                                <img alt="25K PACK" class="pack-img" src="images/packs/badge2.png">
                             </div>
-                            <div class="col-sm-3 badges-bg">
-                                <div class="badges">
-                                    <img alt="200K PACK" class="img-responsive" src="images/packs/badge4.png">
-                                </div>
-                                <div class="badge-bottom">
-                                    <a class="buy_btn" href="javascript:void(0);" data-pid="48">
-                                        <button class="btn-animation btn-animation-color">Open</button>
-                                    </a>
-                                    <a class="demo" href="/pack/fifa18packs-ps4-200k-pack.html?demo=true">
-                                        <i class="iconfont icon-font47"></i>
-                                        <div class="demo1">Demo</div>
-                                    </a>
-                                    <div class="price">
-                                        200,000 Coins / 200,000 Credits </div>
-                                </div>
+                            <div class="badge-bottom">
+                                <a class="buy_btn" href="javascript:void(0);" data-pid="52">
+                                    <button class="btn-animation btn-animation-color">Open</button>
+                                </a>
+                                <a class="demo" href="/pack/fifa18packs-ps4-25k-pack.html?demo=true">
+                                    <i class="iconfont icon-font47"></i>
+                                    <div class="demo1">Demo</div>
+                                </a>
+                                <div class="price">
+                                    25,000 Coins / 25,000 Credits </div>
                             </div>
-                            <div class="col-sm-3 badges-bg">
-                                <div class="badges">
-                                    <img alt="250K PACK" class="img-responsive" src="images/packs/badge5.png">
-                                </div>
-                                <div class="badge-bottom">
-                                    <a class="buy_btn" href="javascript:void(0);" data-pid="49">
-                                        <button class="btn-animation btn-animation-color">Open</button>
-                                    </a>
-                                    <a class="demo" href="/pack/fifa18packs-ps4-250k-pack.html?demo=true">
-                                        <i class="iconfont icon-font47"></i>
-                                        <div class="demo1">Demo</div>
-                                    </a>
-                                    <div class="price">
-                                        250,000 Coins / 250,000 Credits </div>
-                                </div>
+                        </div>
+                        <div class="badges-bg">
+                            <div class="badges">
+                                <img alt="50K PACK" class="pack-img" src="images/packs/badge3.png">
                             </div>
-                            <div class="col-sm-3 badges-bg">
-                                <div class="badges">
-                                    <img alt="500K PACK" class="img-responsive" src="images/packs/badge6.png">
-                                </div>
-                                <div class="badge-bottom">
-                                    <a class="buy_btn" href="javascript:void(0);" data-pid="51">
-                                        <button class="btn-animation btn-animation-color">Open</button>
-                                    </a>
-                                    <a class="demo" href="/pack/fifa18packs-ps4-500k-pack.html?demo=true">
-                                        <i class="iconfont icon-font47"></i>
-                                        <div class="demo1">Demo</div>
-                                    </a>
-                                    <div class="price">
-                                        500,000 Coins / 500,000 Credits </div>
-                                </div>
+                            <div class="badge-bottom">
+                                <a class="buy_btn" href="javascript:void(0);" data-pid="47">
+                                    <button class="btn-animation btn-animation-color">Open</button>
+                                </a>
+                                <a class="demo" href="/pack/fifa18packs-ps4-50k-pack.html?demo=true">
+                                    <i class="iconfont icon-font47"></i>
+                                    <div class="demo1">Demo</div>
+                                </a>
+                                <div class="price">
+                                    50,000 Coins / 50,000 Credits </div>
                             </div>
-                            <div class="col-sm-3 badges-bg">
-                                <div class="badges">
-                                    <img alt="TOTW 1M PACK" class="img-responsive" src="images/packs/badge7.png">
-                                </div>
-                                <div class="badge-bottom">
-                                    <a class="buy_btn" href="javascript:void(0);" data-pid="54">
-                                        <button class="btn-animation btn-animation-color">Open</button>
-                                    </a>
-                                    <a class="demo" href="/pack/fifa18packs-ps4-totw-1m-pack.html?demo=true">
-                                        <i class="iconfont icon-font47"></i>
-                                        <div class="demo1">Demo</div>
-                                    </a>
-                                    <div class="price">
-                                        1,000,000 Coins / 1,000,000 Credits </div>
-                                </div>
+                        </div>
+                        <div class="badges-bg">
+                            <div class="badges">
+                                <img alt="200K PACK" class="pack-img" src="images/packs/pack-100.png">
                             </div>
-                            <div class="col-sm-3 badges-bg">
-                                <div class="badges">
-                                    <img alt="100K PACK" class="img-responsive" src="images/packs/badge8.png">
-                                </div>
-                                <div class="badge-bottom">
-                                    <a class="buy_btn" href="javascript:void(0);" data-pid="55">
-                                        <button class="btn-animation btn-animation-color">Open</button>
-                                    </a>
-                                    <a class="demo" href="/pack/fifa18packs-ps4-100k-pack.html?demo=true">
-                                        <i class="iconfont icon-font47"></i>
-                                        <div class="demo1">Demo</div>
-                                    </a>
-                                    <div class="price">
-                                        100,000 Coins / 100,000 Credits </div>
-                                </div>
+                            <div class="badge-bottom">
+                                <a class="buy_btn" href="javascript:void(0);" data-pid="48">
+                                    <button class="btn-animation btn-animation-color">Open</button>
+                                </a>
+                                <a class="demo" href="/pack/fifa18packs-ps4-200k-pack.html?demo=true">
+                                    <i class="iconfont icon-font47"></i>
+                                    <div class="demo1">Demo</div>
+                                </a>
+                                <div class="price">
+                                    200,000 Coins / 200,000 Credits </div>
+                            </div>
+                        </div>
+                        <div class="badges-bg">
+                            <div class="badges">
+                                <img alt="250K PACK" class="pack-img" src="images/packs/badge5.png">
+                            </div>
+                            <div class="badge-bottom">
+                                <a class="buy_btn" href="javascript:void(0);" data-pid="49">
+                                    <button class="btn-animation btn-animation-color">Open</button>
+                                </a>
+                                <a class="demo" href="/pack/fifa18packs-ps4-250k-pack.html?demo=true">
+                                    <i class="iconfont icon-font47"></i>
+                                    <div class="demo1">Demo</div>
+                                </a>
+                                <div class="price">
+                                    250,000 Coins / 250,000 Credits </div>
+                            </div>
+                        </div>
+                        <div class="badges-bg">
+                            <div class="badges">
+                                <img alt="500K PACK" class="pack-img" src="images/packs/badge6.png">
+                            </div>
+                            <div class="badge-bottom">
+                                <a class="buy_btn" href="javascript:void(0);" data-pid="51">
+                                    <button class="btn-animation btn-animation-color">Open</button>
+                                </a>
+                                <a class="demo" href="/pack/fifa18packs-ps4-500k-pack.html?demo=true">
+                                    <i class="iconfont icon-font47"></i>
+                                    <div class="demo1">Demo</div>
+                                </a>
+                                <div class="price">
+                                    500,000 Coins / 500,000 Credits </div>
+                            </div>
+                        </div>
+                        <div class="badges-bg">
+                            <div class="badges">
+                                <img alt="TOTW 1M PACK" class="pack-img" src="images/packs/badge7.png">
+                            </div>
+                            <div class="badge-bottom">
+                                <a class="buy_btn" href="javascript:void(0);" data-pid="54">
+                                    <button class="btn-animation btn-animation-color">Open</button>
+                                </a>
+                                <a class="demo" href="/pack/fifa18packs-ps4-totw-1m-pack.html?demo=true">
+                                    <i class="iconfont icon-font47"></i>
+                                    <div class="demo1">Demo</div>
+                                </a>
+                                <div class="price">
+                                    1,000,000 Coins / 1,000,000 Credits </div>
+                            </div>
+                        </div>
+                        <div class="badges-bg">
+                            <div class="badges">
+                                <img alt="100K PACK" class="pack-img" src="images/packs/badge8.png">
+                            </div>
+                            <div class="badge-bottom">
+                                <a class="buy_btn" href="javascript:void(0);" data-pid="55">
+                                    <button class="btn-animation btn-animation-color">Open</button>
+                                </a>
+                                <a class="demo" href="/pack/fifa18packs-ps4-100k-pack.html?demo=true">
+                                    <i class="iconfont icon-font47"></i>
+                                    <div class="demo1">Demo</div>
+                                </a>
+                                <div class="price">
+                                    100,000 Coins / 100,000 Credits </div>
                             </div>
                         </div>
                     </div>
@@ -195,7 +193,16 @@
 
     </div>
 
-    @@include('./footer.html') @@include('./foot.html')
+    @@include('./footer.html')
+    @@include('./foot.html')
+    <script>
+        $(document).ready(function(){
+            $('.pack-img').each(function(index, item){
+                item_width = $(item).width();
+                $(item).css('left', - (item_width - 215)/2);
+            });
+        });
+    </script>
 </body>
 
 </html>
