--- a/src/shop-details.html
+++ b/src/shop-details.html
@@ -30,7 +30,7 @@
                             Amazon Gift Card
                         </span>
                         <span class="good-value-range">
-                            123,543~365,589
+                            123,543
                         </span>
                     </div>
                     <div class="good-show-r-b">
@@ -49,11 +49,23 @@
                         </div>
                         <div class="group clearfix">
                             <div class="group-label pull-left">
-                                Amount
+                                Platform
                             </div>
-                            <div class="amount">
-                                999,888
+                            <div class="value">
+                                PS4
                             </div>
+                        </div>
+
+                        <div class="group clearfix">
+                            <div class="group-label pull-left">
+                                Country
+                            </div>
+                            <select class="select-shop">
+                                <option value="en">EN</option>
+                                <option value="it">IT</option>
+                                <option value="ar">AR</option>
+                                <option value="fr">FR</option>
+                            </select>
                         </div>
 
                         <button class="btn btn-redeem" id="redeem">Redeem</button>
@@ -149,7 +161,7 @@
                 </div>
                 <div class="sidebar-item clearfix" data-cardbg="ebay@410x250.png">
                     <div class="sidebar-item-l">
-                        <img src="./images/others/ebay@88x55.png" alt="">
+                        <img src="./images/others/ebay@320x200.png" alt="">
                     </div>
                     <div class="sidebar-item-r">
                         <span class="good-name">EBay card</span>
