--- a/src/shop.html
+++ b/src/shop.html
@@ -152,7 +152,7 @@
 
             <div class="shop-goods clearfix">
                 <div class="good-item">
-                    <img class="good-img" src="./images/others/amazon.png" alt="">
+                    <img class="good-img" src="./images/others/amazon@320x210.png" alt="">
                     <span class="name">Amazon Gift Card</span>
                     <span class="value">123,568</span>
                     <ul class="pat-select">
